# remote_adr

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile.server  Dockerfile.web  PROJECT_STATUS.md  README.md  build-and-run.bat  build-and-run.sh  docker-compose.yml  nginx-proxy.conf  nginx.conf  run-test.ps1  spec.ini
.github/workflows/: ci-cd.yml
android-client/: .gitignore  README.md  build.gradle  settings.gradle  test_output.txt
android-client/app/: build.gradle  proguard-rules.pro
android-client/app/src/main/: AndroidManifest.xml
android-client/app/src/main/java/com/arcs/: ARCSApplication.kt
android-client/app/src/main/java/com/arcs/accessibility/: RemoteAccessibilityService.kt
android-client/app/src/main/java/com/arcs/ai/: AIAssistant.kt  OCRModule.kt  UIDetector.kt
android-client/app/src/main/java/com/arcs/automation/: Macro.kt  MacroExecutor.kt  MacroRecorder.kt  MacroStorage.kt
android-client/app/src/main/java/com/arcs/core/: DeviceInfo.kt  PermissionManager.kt
android-client/app/src/main/java/com/arcs/input/: KeyInjector.kt  RemoteIME.kt  TouchInjector.kt
android-client/app/src/main/java/com/arcs/network/: CommandDispatcher.kt  SecureChannel.kt  WebSocketClient.kt
android-client/app/src/main/java/com/arcs/projection/: FramePacketizer.kt  ScreenCapturer.kt  VideoEncoder.kt
android-client/app/src/main/java/com/arcs/service/: RemoteControlService.kt  ServiceState.kt
android-client/app/src/main/java/com/arcs/ui/: MainActivity.kt  SettingsActivity.kt
android-client/app/src/main/res/values/: strings.xml
android-client/app/src/main/res/xml/: accessibility_service_config.xml  ime_config.xml  network_security_config.xml
android-client/app/src/test/java/com/arcs/client/network/: CommandDispatcherTest.kt  SecureChannelTest.kt  WebSocketIntegrationTest.kt
android-client/app/src/test/java/com/arcs/client/service/: ReconnectionLogicTest.kt  ServiceStateTest.kt
docs/: api.md  architecture.md  deployment.md  protocol.md  security.md
mock-server/: package-lock.json  package.json  server.js
pc-controller/: CMakeLists.txt  README.md
pc-controller/src/: main.cpp
pc-controller/src/decoder/: video_decoder.cpp  video_decoder.h
pc-controller/src/network/: websocket_client.cpp  websocket_client.h
pc-controller/src/ui/: control_panel.cpp  control_panel.h  main_window.cpp  main_window.h  video_widget.cpp  video_widget.h
server/: CMakeLists.txt  README.md
server/src/: main.cpp
server/src/auth/: device_registry.cpp  device_registry.h  jwt_manager.cpp  jwt_manager.h
server/src/logger/: audit_logger.cpp  audit_logger.h
server/src/router/: command_router.cpp  command_router.h
server/src/security/: rate_limiter.cpp  rate_limiter.h
server/src/stream/: stream_router.cpp  stream_router.h
server/src/websocket/: connection_handler.cpp  connection_handler.h  message_parser.cpp  message_parser.h  session_manager.cpp  session_manager.h
server/tests/: CMakeLists.txt  command_router_test.cpp  device_registry_test.cpp  message_parser_test.cpp  rate_limiter_test.cpp  run_tests_manual.bat  server_integrity_test.cpp
web-controller/: README.md  index.html  package-lock.json  package.json
web-controller/src/: App.css  App.tsx  index.css
web-controller/src/components/: ConnectionDialog.css  ConnectionDialog.tsx  ControlPanel.css  ControlPanel.tsx  StatusBar.css  StatusBar.tsx  VideoDisplay.css  VideoDisplay.tsx
web-controller/src/hooks/: useTouchHandler.ts  useVideoDecoder.ts  useWebSocket.ts
web-controller/src/store/: connectionStore.ts
